<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="device_settings_title">BlackBerry settings</string>
    <string name="device_settings_summary">Physical keyboard settings, hardware configuration, legacy BlackBerry apps</string>

    <string name="keyboard_category">Keyboard</string>

    <string name="keyboard_pin_input_title">Keyboard PIN input</string>
    <string name="keyboard_pin_input_summary">Type lockscreen PIN using physical keyboard</string>

    <string name="show_ime_title">Allow on-screen keyboard</string>
    <string name="show_ime_summary">Show virtual keyboard even when hardware keyboard is connected</string>

    <string name="ime_switcher_shortcut_title">IME switcher shortcut</string>
    <string name="ime_switcher_shortcut_summary">Key combination to open input method picker</string>

    <string name="ime_shortcut_alt_enter">Alt + Enter</string>
    <string name="ime_shortcut_shift_space">Shift + Space</string>
    <string name="ime_shortcut_ctrl">Ctrl key</string>
    <string name="ime_shortcut_sym">SYM key</string>

    <string name="keyboard_backlight_category">Keyboard backlight</string>
    <string name="keyboard_adaptive_brightness_title">Keyboard adaptive brightness</string>
    <string name="keyboard_adaptive_brightness_summary">Keyboard backlight scales with screen brightness and turns off with bright screen</string>
    <string name="keyboard_brightness_title">Keyboard brightness</string>
    <string name="keyboard_brightness_summary">Brightness level for keyboard backlight</string>
    <string name="keyboard_backlight_timeout_title">Keyboard backlight timeout</string>
    <string name="keyboard_backlight_timeout_summary">Time before keyboard backlight turns off</string>
    <string name="keyboard_only_when_pressed_title">Only light on press</string>
    <string name="keyboard_only_when_pressed_summary">Keyboard backlight only turns on with key press</string>
    <string name="button_backlight_category">Button backlight</string>
    <string name="button_adaptive_brightness_title">Button adaptive brightness</string>
    <string name="button_adaptive_brightness_summary">Navigation button backlight scales with screen brightness</string>
    <string name="button_brightness_title">Button brightness</string>
    <string name="button_brightness_summary">Brightness level for navigation buttons</string>
    <string name="button_backlight_timeout_title">Button backlight timeout</string>
    <string name="button_backlight_timeout_summary">Time before button backlight turns off</string>
    <string name="button_only_when_pressed_title">Only light on press</string>
    <string name="button_only_when_pressed_summary">Button backlight only turns on when pressed</string>

    <string name="timeout_disabled">Disabled</string>
    <string name="timeout_1s">1 second</string>
    <string name="timeout_2s">2 seconds</string>
    <string name="timeout_5s">5 seconds</string>
    <string name="timeout_10s">10 seconds</string>
    <string name="timeout_30s">30 seconds</string>
    <string name="timeout_60s">1 minute</string>

    <string name="touchscreen_category">Touchscreen</string>
    <string name="host_dt2w_title">DT2W compatibility mode</string>
    <string name="host_dt2w_summary">Alternate double-tap-to-wake detection. This may improve reliability for FocalTech touchscreens but can increase standby power.</string>

    <string name="apps_category">Apps</string>
    <string name="legacy_blackberry_apps_title">Legacy BlackBerry apps</string>
    <string name="legacy_blackberry_apps_summary">Install BlackBerry Keyboard and BlackBerry Launcher from Google Play</string>
    <string name="legacy_blackberry_apps_instructions">Tap an app below to view it on Google Play.</string>
    <string name="blackberry_keyboard_title">BlackBerry Keyboard</string>
    <string name="blackberry_launcher_title">BlackBerry Launcher</string>
    <string name="app_installed">Installed</string>
    <string name="app_not_installed">Not installed</string>
</resources>
