<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="legacy_blackberry_apps_instructions"
        android:summary="@string/legacy_blackberry_apps_instructions"
        android:selectable="false"
        android:persistent="false"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="blackberry_keyboard"
        android:title="@string/blackberry_keyboard_title"
        android:persistent="false"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="blackberry_launcher"
        android:title="@string/blackberry_launcher_title"
        android:persistent="false"
        app:iconSpaceReserved="false" />

</PreferenceScreen>
